Start presentation prep

--- a/Presentation/beamer.bib
+++ b/Presentation/beamer.bib
@@ -1,3 +1,20 @@
+@article{born_beweis_1928,
+	title = {Beweis des {Adiabatensatzes}},
+	volume = {51},
+	issn = {0044-3328},
+	url = {https://doi.org/10.1007/BF01343193},
+	doi = {10.1007/BF01343193},
+	abstract = {Der Adiabatensatz in der neuen Quantenmechanik wird für den Fall des Punktspektrums in mathematisch strenger Weise bewiesen, wobei er sich auch bei einer vorübergehenden Entartung des mechanischen Systems als gültig erweist.},
+	language = {de},
+	number = {3},
+	urldate = {2025-03-01},
+	journal = {Zeitschrift für Physik},
+	author = {Born, M. and Fock, V.},
+	month = mar,
+	year = {1928},
+	pages = {165--180},
+}
+
 @article{lucas_ising_2014,
 	title = {Ising formulations of many {NP} problems},
 	volume = {2},
