--- a/Presentation/beamer.tex
+++ b/Presentation/beamer.tex
@@ -157,7 +157,11 @@
 
     \begin{figure}
         \centering
-        \input{../Figures/quantum-annealing-analogy.pdf_tex}
+        {
+            \def\svgwidth{.8\textwidth}
+            \tiny\selectfont
+            \input{../Figures/qa-analogy.pdf_tex}
+        }
         
         \caption{By Brianlechthaler - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=112382195}
     \end{figure}
