--- a/Presentation/beamer.tex
+++ b/Presentation/beamer.tex
@@ -1,5 +1,5 @@
 \documentclass[handout]{beamer}
-\setbeameroption{hide notes}
+\setbeameroption{show notes on second screen=right}
 %show notes on second screen=right
 %show only notes
 %hide notes
@@ -68,14 +68,15 @@
     \tableofcontents
 
     \note<1->{\begin{itemize}
-        \item{What is music arrangement? What is quantum annealing?}
-        \item{Methods used to solve the music arrangement problem}
-        \item{Preliminary results from application of the method}
-        \item{Concluding thoughts about this process}
+        \item AQC, more general umbrella term for the technique
+        \item Quantum annealing as a subset of AQC and what that involves
+        \item Music arrangement and why we're looking at this problem
+        \item How the problem is solved, and the following results
+        \item Conclusions and future work
     \end{itemize}}
 \end{frame}
 
-\section{Theory} %%%%%%%%%%
+\section{Theory}
 
 \subsection{Adiabatic quantum computing}
 
@@ -97,9 +98,10 @@
     \end{itemize}
     
     \note<1->{\begin{itemize}
-        \item Equation shows evolution from initial Hamiltonian $H_0$ to final $H_p$
-        \item If done truly adiabatically (closed system), system remains in ground state
-        \item Impossible in practice as true adiabatic evolution would take infinite time
+        \item Adiabatic principle | system remains in the same eigenstate if perturbed slowly enough (without transferring heat)
+        \item Equation shows evolution from initial Hamiltonian $H_0$ to final $H_p$ over time $T$
+        \item Importantly, if the system starts in the ground state, it will end in the ground state
+        \item Impossible in practice as true adiabatic evolution would take infinite time, infinitely many steps
     \end{itemize}}
 \end{frame}
 
@@ -117,15 +119,18 @@
         \begin{column}{0.5\textwidth}
             \begin{figure}
                 \resizebox{\textwidth}{!}{\input{../Figures/histogram.pgf}}
-                \caption{Distribution of 2000 solution energies}
+                \caption{Distribution of 2000 solution energies for a given problem}
             \end{figure}
         \end{column}
     \end{columns}
 
     \note<1->{\begin{itemize}
+        \item Subset of AQC, relaxes the adiabaticity condition
+        \item Annealing | slow heating of a material to change its properties
         \item Evolution time shortened (order of a few $\mu\mathrm{s}$)
+        \item End state no longer guaranteed, if started in ground state could end in excited state
         \item Able to run the evolution many times
-        \item Probabilistic distribution of outcomes
+        \item Probabilistic distribution of outcomes, sometimes will get lucky
     \end{itemize}}
 \end{frame}
 
@@ -146,7 +151,11 @@
     \end{figure}
 
     \note<1->{\begin{itemize}
-        \item{Energy against configuration space of the system}
+        \item Why is this technique useful?
+        \item Allows us to find the ground state of complicated Hamiltonians by starting from an easy one
+        \item Diagram | energy against configuration space, simulated annealing (classical) traverses the "energy landscape" whereas quantum annealing tunnels through it
+        \item As opposed to classical methods, does not get affected by local minima
+        \item Technique very good for solving optimisation problems e.g.\ travelling salesman, with complicated energy landscapes
     \end{itemize}}
     
 \end{frame}
@@ -166,11 +175,11 @@
     \end{alertblock}
     
     \note<1->{\begin{itemize}
-        \item{Ising model, a lattice of variables with two discrete values (spin up/down), acted on by spin operators $\sigma$}
-        \item{Start with initial Hamiltonian, a superposition of all possible states}
-        \item{Easy to prepare and find the ground state}
-        \item{Problem Hamiltonian, coupling strengths $J_{ij}$ and field strengths $h_i$}
-        \item{If problem solution is encoded within the ground state, system will give solution after evolution}
+        \item How can we model the Hamiltonians?
+        \item Ising model, a lattice of variables with two discrete values (+1/-1), acted on by spin operators $\sigma$
+        \item Start with initial Hamiltonian, superposition of all possible states, easy to prepare and find the ground state
+        \item Problem Hamiltonian, coupling strengths $J_{ij}$ and field strengths $h_i$, describe interactions (biases) of the spins
+        \item Want to encode the problem solution into the ground state of this Hamiltonian so that the system will give the solution after evolution
     \end{itemize}}
 \end{frame}
 
@@ -193,68 +202,93 @@
 
     \note<1->{\begin{itemize} 
         \item How to encode a problem into a Hamiltonian?
-        \item Similar form to the Ising model, but with binary variables (0 or 1)
-        \item QUBO is a function to be minimised
+        \item Similar form to the Ising model, but with binary variables (0/1)
+        \item Minimisation of this function should be the problem solution
         \item Set of binary variables $x$, matrix $Q$ of real weights that describes interactions between variables
-        \item Can read out variable values after evolution to give solution
+        \item After evolution, can read out the values of $x$ to give solution
     \end{itemize}}
+\end{frame}
+
+\section{Motivations}
+
+\begin{frame}[standout]
+    What problems can we solve?
 \end{frame}
 
 \subsection{Music arrangement}
 
-\begin{frame}[standout]
-    What problems can we solve?
-
-    \note<1->{\begin{itemize}
-        \item What problems can we solve using this technique?
-    \end{itemize}}
-\end{frame}
-
 \begin{frame}{Music arrangement}
-    \begin{columns}
-        \begin{column}{0.6\textwidth}
-            \begin{itemize}[<+(1)->]
-                \item Adaptation of previously composed pieces for practical or artistic reasons
-                \item Traditionally complex and time-consuming
-                \item \emph{Reduction} can be shown to be computationally complex\footnotemark
-            \end{itemize}
-        \end{column}
-        \begin{column}{0.4\textwidth}
-            \begin{figure}
-                \includegraphics[width=\textwidth, page=1]{haydn.pdf}
-                \caption{Quartet No. 1 in Bb major by Joseph Haydn}
-            \end{figure}
-        \end{column}
-    \end{columns}
 
-    \footnotetext{\cite{moses_computational_2016}}
+    \begin{itemize}[<+(1)->]
+        \item Adaptation of previously composed pieces for practical or artistic reasons
+        \item Traditionally difficult and time-consuming
+        \item \emph{Reduction} can be shown to be computationally complex\footcite{moses_computational_2016}
+    \end{itemize}
+
+    \begin{figure}
+        \includegraphics[width=.5\textwidth]{manuscript.jpg}
+        \caption{www.freepik.com}
+    \end{figure}
 
     \note<1->{\begin{itemize}
         \item Adaptation of music in terms of instrumentation, medium, or style
         \item Traditionally a complex process that requires a deep understanding of musical theory and structure
         \item Reduction is the rewriting of music for a smaller number of instruments (for example string quartet)
         \item Very large configuration space, many different combinations of notes that could produce the final arrangement
-        \item NP-hard in computational complexity theory, cannot be solved in polynomial time
+        \item For those interested, NP-hard in computational complexity theory, cannot be solved in polynomial time
+        \item NB: all scores shown are own reproductions from public domain files
     \end{itemize}}
 \end{frame}
-
-\section{Motivations}
 
 \begin{frame}{Motivations}
     
     \begin{itemize}[<+(1)->]
-        \item Classical methods of automatic arrangement\footcite{huang_towards_2012,nakamura_statistical_2018,li_automatic_2019}
-        \item Field of quantum computer music is very new\footcite{miranda_quantum_2022}
+        \item Already exist classical methods of automatic arrangement\footcite{huang_towards_2012,nakamura_statistical_2018,li_automatic_2019}
         \item Quantum annealing used to generate music\footcite{freedline_algorhythms_2021,arya_music_2022,}
+        \item Field of quantum computer music is very new\footcite{miranda_quantum_2022}
         \item Novel adaption of this method to a new problem
         \item \emph{This has never been done before!}
     \end{itemize}
     
+    \note<1->{\begin{itemize}
+        \item Context of previous work
+        \item Classical methods | machine learning, statistical analysis, rule-based systems, iterative and slow
+        \item Applying quantum computing to music in the last five years, still a very young technology with limitations
+        \item Has been used to generate music, not arrange it
+        \item Methods shown here have not been found in the literature
+    \end{itemize}}
 \end{frame}
 
 \section{Method} %%%%%%%%%%
 
+\begin{frame}{Aims}
+
+    \begin{columns}
+        \begin{column}{.6\textwidth}
+            \begin{itemize}[<+(1)->]
+                \item Arrange a musical score for a smaller ensemble
+                \item All notes are taken from the original score
+                \item Each instrument can only play one note at a time
+            \end{itemize}
+        \end{column}
+        \begin{column}{.4\textwidth}
+            \begin{figure}
+                \includegraphics[width=\textwidth]{string-quartet.jpg}
+                \caption{Joseph Haydn playing in a string quartet,\\painting from the StaatsMuseum, Vienna}
+            \end{figure}
+        \end{column}
+    \end{columns}
+
+    \note<1->{\begin{itemize}
+        \item What are we trying to do? What are the constraints to our problem?
+        \item Take a musical score and reduce it to a smaller ensemble
+        \item All notes must be taken from the original score, no new notes can be added
+        \item Each instrument can only take notes from one part at a time
+    \end{itemize}}
+\end{frame}
+
 \begin{frame}{Method}
+
     \begin{enumerate}[<+(1)->]
         \item Split score into musical phrases
         \item Arrange phrases into a graph
@@ -264,18 +298,20 @@
     \end{enumerate}
 
     \note<1->{\begin{itemize}
-        \item{Formulating arrangement as a problem to be solved via annealing, four-step process}
-        \item{Split parts into musical phrases}
-        \item{Arrange phrases into a graph (nodes and edges)}
-        \item{Solve corresponding graph problem using quantum computing}
-        \item{Construct final arrangement from the solution returned}
+        \item Formulating arrangement as a problem to be solved via annealing, five-step process
+        \item Split parts into musical phrases
+        \item Arrange phrases into a graph (will explain later)
+        \item Formulate the optimisation problem
+        \item Solve corresponding graph problem using a quantum computer
+        \item Construct final arrangement from the solution returned
     \end{itemize}}
 \end{frame}
 
 \begin{frame}{1.\ Split score}
-    \begin{itemize}[<+(1)->]
+
+    \begin{itemize}
         \item Musical phrases chosen as smallest unit of music
-        \item Preserve melody and structure when arranged
+        \item Preserve melody and structure when rearranged
     \end{itemize}
     \pause
     \begin{block}{Local boundary detection model (LBDM)\footcite{cambouropoulos_lbdm_2011}}
@@ -286,15 +322,15 @@
     \end{block}
     \pause
     \begin{figure}
-        \includegraphics<1->[width=0.7\textwidth]{toy-1.png}
+        \includegraphics<1->[width=0.75\textwidth]{toy-1.png}
     \end{figure}
 
     \note<1->{\begin{itemize}
         \item First stage to separate each part of original score into phrases
         \item Phrases | smallest unit of music that preserves melody and structure
         \item Boundaries between phrases found using LBDM
-        \item Measures the degree of change of a certain parameter between notes (explain equation)
-        \item Check pitch and IOI
+        \item Measures the degree of change of a certain parameter ($x$) between notes ($i$) (explain equation)
+        \item Strength calculated for both pitch and IOI, weighted and summed to give the final strength
         \item Strengths above a threshold value are considered phrases
     \end{itemize}}
 \end{frame}
@@ -305,42 +341,57 @@
         \item Vertices (nodes) connected by edges
         \item Models pairwise relations between objects
     \end{itemize}
-
     \begin{figure}
-        \includegraphics[width=0.7\textwidth]{../Figures/toy-1.png}
+        \includegraphics[width=0.75\textwidth]{../Figures/toy-1.png}
     \end{figure}
-
     \begin{itemize}
         \item Nodes | phrases
         \item Edges | overlap between phrases
     \end{itemize}
 
     \note<1->{\begin{itemize}
-        \item{Construct problem graph}
-        \item{Each phrase becomes a node, edges between nodes if phrases overlap}
+        \item What is a graph? Nodes connected by edges, useful to model pairwise relations between objects
+        \item Each phrase becomes a node, edges between nodes if phrases overlap (play at the same time)
     \end{itemize}}
 \end{frame}
 
 \begin{frame}{2.\ Create graph}
+
     \centering
     \includegraphics[width=0.7\textwidth]{../Figures/toy-1.png}
-    \scalebox{.8}{\input{../Figures/toy_graph.pgf}}
+    \scalebox{.7}{\input{../Figures/toy_graph.pgf}}
+
+    \note<1->{\begin{itemize}
+        \item Score on top becomes graph on bottom
+    \end{itemize}}
 \end{frame}
 
 \begin{frame}{3.\ Create optimisation problem}
+
     \begin{exampleblock}{Proper vertex colouring}
         \vspace{0.1em}
         Colour each vertex such that no edge connects two vertices of the same colour
     \end{exampleblock}
-
+    \begin{equation*}
+        x_{v,i} =
+        \begin{cases}
+            1 & \text{if vertex $v$ is colour $i$} \\
+            0 & \text{otherwise}
+        \end{cases}
+    \end{equation*}
     \begin{align*}
         f(x) = +&\alert<+(1)>{A\sum_{v \in V}\left(1-\sum_{i=1}^{n} x_{v,i}\right)^2} &+ &\alert<+(1)>{B\sum_{(u,v) \in E}\sum_{i=1}^n x_{u,i}x_{v,i}} \\ -&\alert<+(1)>{C\sum_{v \in V}\sum_{i=1}^n W_vx_{v,i}} &-&\alert<+(1)>{D\sum_{(u,v)\in E}W_{uv}\sum_{i=1}^n\sum_{j=1}^n x_{u,i}x_{v,j}}
     \end{align*}
 
     \note<1->{\begin{itemize}
-        \item Solve problem graph using a graph theory problem called proper vertex colouring
+        \item Use a graph theory problem to create the optimisation problem that matches our constraints
         \item Here each colour represents an instrument we are arranging for
-        \item Nodes can also be weighted to introduce preference for certain nodes e.g.\ musicality
+        \item QUBO, set of $n$ colours, $x_{v,i}$ is 1 if node $v$ is colour $i$
+        \item $A$ | each node is only coloured once, sum over colours is one
+        \item $B$ | penalise adjacent nodes with the same colour
+        \item $C$ | weight of each node, preference for certain nodes
+        \item $D$ | weight of each edge, preference for certain edges
+        \item Weights here are musical entropy i.e.\ how interesting the phrase is musically
     \end{itemize}}
 \end{frame}
 
@@ -350,6 +401,11 @@
 
 \begin{frame}{3.\ Create optimisation problem}
     \input{../Figures/toy_solution.pgf}
+
+    \note<1->{\begin{itemize}
+        \item $n=1$
+        \item One of many possible solutions
+    \end{itemize}}
 \end{frame}
 
 \begin{frame}{4.\ Solve problem}
@@ -360,6 +416,7 @@
                 \item Problem embedded onto D-Wave quantum hardware
                 \item Quantum annealer optimises QUBO formulation
                 \item Returns a sampleset of results
+                \item Run many times to find lowest-energy solution
             \end{itemize}
         \end{column}
         \begin{column}{.5\textwidth}
@@ -370,9 +427,16 @@
         \end{column}
     \end{columns}
     
+    \note<1->{\begin{itemize}
+        \item D-Wave Systems is a company that gives access to true quantum annealers, normally for business applications
+        \item Interact via a Python SDK, submit problems to the QPU
+        \item Returns a distribution of results, each with an associated energy
+        \item Run the problem thousands of times to find the lowest-energy solutions
+    \end{itemize}}
 \end{frame}
 
 \begin{frame}{5.\ Construct arrangement}
+
     \begin{figure}
         \begin{subfigure}{0.5\textwidth}
             \includegraphics[width=\textwidth]{toy-1.png}
@@ -391,7 +455,8 @@
     \end{figure}
 
     \note<1->{\begin{itemize}
-        \item{Take solution graph and combine selected nodes to create final arrangement}
+        \item Take chosen low-energy solution and construct the final arrangement
+        \item Map each node back to its phrase, with colour corresponding to the instrument
     \end{itemize}}
 \end{frame}
 
@@ -400,14 +465,14 @@
 \begin{frame}{Score}
 
     \begin{columns}
-        \begin{column}{.5\textwidth}
+        \begin{column}{.6\textwidth}
             \begin{itemize}
                 \item Smaller ensemble chosen for problem size
                 \item Well-defined musical structure
                 \item Reduction to three instruments
             \end{itemize}
         \end{column}
-        \begin{column}{.5\textwidth}
+        \begin{column}{.4\textwidth}
             \begin{figure}
                 \includegraphics[width=\textwidth, page=1]{haydn.pdf}
                 \caption{Quartet No. 1 in Bb major by Joseph Haydn}
@@ -429,42 +494,52 @@
     \end{figure}
 
     \note<1->{\begin{itemize}
-        \item{Example of the LBDM finding suitable boundaries for phrases}
-        \item{Threshold value of $0.4$ chosen manually}
+        \item Example of the LBDM finding suitable boundaries for phrases
+        \item Threshold value of $0.4$ chosen manually
+        \item FIX x-axis labels
     \end{itemize}}
 \end{frame}
 
 \begin{frame}{QUBO parameter variation}
     \begin{figure}
-        \resizebox{.7\textwidth}{!}{\input{../Figures/mult.pgf}}
-        \caption{Variation of with edge weight Lagrange parameter, in multiples of the maximum node weight.}
+        \resizebox{.75\textwidth}{!}{\input{../Figures/mult.pgf}}
+        \caption{Variation of the edge weight Lagrange parameter $B$, in multiples of the maximum node weight}
     \end{figure}
 
     \note<1->{\begin{itemize}
         \item Each QUBO problem submitted five times with different edge constraint Lagrange parameter
         \item Checking against fulfillment of the desired constraint
+        \item Lagrange parameters taken as multipliers of the maximum node weight for normalisation 
+        \item $12.0$ chosen as the best parameter, with all others equal to one
     \end{itemize}}
 \end{frame}
 
 \begin{frame}{Optimisation}
+
     \begin{figure}
-        \resizebox{.8\textwidth}{!}{\input{../Figures/reads.pgf}}
+        \resizebox{.75\textwidth}{!}{\input{../Figures/reads.pgf}}
+        \caption{Variation of the number of QPU reads, with the lowest-energy solution found}
     \end{figure}
 
     \note<1->{\begin{itemize}
-        \item Exponential decay fitted
+        \item Once Lagrange parameters chosen, can check how well the annealer optmises the problem
+        \item In general, more reads is more likely to find lower-energy solutions
         \item Sometimes the annealer gets lucky (see 2000 reads)
+        \item Each number of reads repeated five times, exponential decay fitted
     \end{itemize}}
 \end{frame}
 
 \begin{frame}{Example solution}
+
     \begin{figure}
         \includegraphics[width=\textwidth]{sample-graph.pdf}
+        \caption{A returned low-energy solution, node size represents weight}
     \end{figure}
 
     \note<1->{\begin{itemize}
+        \item Example of a returned solution with low energy
         \item Nodes grouped by instrument
-        \item{Note in the cliques only one node could be selected}
+        \item Constraints fulfilled, no horizontal lines, each node one colour
     \end{itemize}}
 \end{frame}
 
@@ -472,36 +547,33 @@
 
 \begin{frame}{Conclusions}
     \begin{itemize}[<+(1)->]
-        \item Novel application of quantum annealing
-        \item QPU successfully returns low-energy states
+        \item Successful novel application of quantum annealing
+        \item QPU returns low-energy samples
         \item Necessary constraints for a valid arrangement fulfilled
+        \item Still very new technology, does not show quantum advantage (yet)
     \end{itemize}
 
     \note<1->{\begin{itemize}
-        \item{Valid reduction gained from implemented method}
-        \item{Monophonic lowest-energy solution}
-        \item{Phrase identification and selection result in musically interesting final arrangement}
-        \item{Displays some advantages over classical algorithms}
-        \item{Does not require training data, costly in both time and resources}
-        \item{Faster solve time compared to similarly-sized problems}
-        \item{Method and more advanced versions of it removes the skill barrier for music arrangement}
+        \item Successful application of this method on a new problem
+        \item QPU returns samples that fulfill the constraints of the problem, creating a valid arrangement
+        \item New technology, limited in power
+        \item What would it take for quantum to show advantage?
     \end{itemize}}
 \end{frame}
 
 \begin{frame}{Future work}
     \begin{itemize}[<+(1)->]
-        \item Increased problem size
-        \item Parametric variation of LBDM
-        \item Physical limitations of instruments
+        \item Variation in problem size
+        \item Comparison to classical methods
+        \item Lagrange parameter tuning
         \item Qualitative judgement of computer arrangements\footcite{pearce_towards_2001}
     \end{itemize}
 
     \note<1->{\begin{itemize}
-        \item{Problem size | full piece has upwards of 1000 phrases, compare solve times with classical algorithms}
-        \item{LBDM parameters | phrases should be short and similar in length, prevents important notes being hidden in long phrases with low entropy}
-        \item{Physical limitations | note ranges, note change speed}
-        \item{Multiple parts | need different problem formulation, colouring problem with each colour representing a reduced part}
-        \item{Quality judgement | Turing-like test, present subjects with human-/computer-generated scores}
+        \item How well does the method scale with larger scores? How well can it find low energies with smaller problems?
+        \item Compare to classical optimisation methods, time to solution, energy of solutions
+        \item Only tuned one parameter by hand, could use a more systematic approach to find lower-energy solutions
+        \item Quality judgement | Turing-like test, present subjects with human-/computer-generated scores
     \end{itemize}}
 \end{frame}
 
@@ -516,6 +588,7 @@
 \end{frame}
 
 \begin{frame}{LBDM}
+
     \begin{block}{Boundary strength}
         \begin{gather*}
             S_i=x_i\times (r_{i-1, i} + r_{i, i+1}) \\
@@ -531,9 +604,9 @@
         \begin{equation*}
             S=\frac{1}{3}\left( S'_\mathrm{pitch} + 2 S'_\mathrm{IOI} \right)
         \end{equation*}
+        \hfill\footcite{cambouropoulos_lbdm_2011}
     \end{block}
-    \hfill\footcite{cambouropoulos_lbdm_2011}
-
+    
     \note{\begin{itemize}
         \item Boundaries always taken at beginning/end of piece
         \item Weightings derived by trial and error
@@ -541,7 +614,8 @@
 \end{frame}
 
 \begin{frame}{Phrase entropy}
-    $x_i$ | parameter $x$ (pitch, IOI) of note $i$
+
+    $x_i$ | parameter $x$ of note $i$
     \begin{block}{Shannon entropy}
         \begin{equation*}
             H(X)\coloneq-\sum_i P(x_i)\log_2 P(x_i)
